---------------------------------------------
- Wonder Scale Merchant                     -
---------------------------------------------

- v1.0.1060                                 -
---------------------------------------------
- 2020-12-26                                -
---------------------------------------------
.: WSM: Feature: Invoice Module (WSM-250)
.: WSM: Task: CLONE - Prevent receiptId got brute force and customer information being exposed (WSM-259)

---------------------------------------------
- 2020-12-17                                -
---------------------------------------------
.: WSM: Feature: Promotion Module (WSM-252)
.: WSM: Task: Add name of item type (WSM-254)

---------------------------------------------
- 2020-12-16                                -
---------------------------------------------
.: WSM: Feature: Customer Module (WSM-253)

- v1.0.1050                                 -
---------------------------------------------
- 2020-12-06                                -
---------------------------------------------
.: WSM: Task: Update autocomplete api (WSM-248)
.: WSM: Task: Update command (WSM-216)

---------------------------------------------
- 2020-12-05                                -
---------------------------------------------
.: WSM: Task: Update upload url (WSM-216)

---------------------------------------------
- 2020-12-03                                -
---------------------------------------------
.: WSM: Task: Change icon (WSM-247)

---------------------------------------------
- 2020-11-20                                -
---------------------------------------------
.: WSM: Task: Adding loading spinner in policy page (WSM-243)
.: WSM: BugFix: Not able to have duplicate category is added/edited (WSM-240)
.: WSM: BugFix: Not able to invite user twice (WSM-241)
.: WSM: BugFix: Get "name" of null issue when logging out (WSM-242)

---------------------------------------------