@@ -116,22 +116,22 @@
                 </button>
                 <div class="dropdown-menu dropdown-menu-right mt-0 pb-0 pt-0" aria-labelledby="sortButton">
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox (change)="triggerColumns('id')" [checked]="columns.includes('id')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>ID
+                        <mat-checkbox (change)="triggerColumns('id')" [checked]="columns.includes('id')" [color]="'primary'" class="mr-2 d-inline-block">ID</mat-checkbox>
                     </button>
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox [disabled]="true" (change)="triggerColumns('name')" [checked]="columns.includes('name')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>Name
+                        <mat-checkbox [disabled]="true" (change)="triggerColumns('name')" [checked]="columns.includes('name')" [color]="'primary'" class="mr-2 d-inline-block">Name</mat-checkbox>
                     </button>
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox (change)="triggerColumns('price')" [checked]="columns.includes('price')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>Price
+                        <mat-checkbox (change)="triggerColumns('price')" [checked]="columns.includes('price')" [color]="'primary'" class="mr-2 d-inline-block">Price</mat-checkbox>
                     </button>
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox (change)="triggerColumns('discount')" [checked]="columns.includes('discount')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>Discount
+                        <mat-checkbox (change)="triggerColumns('discount')" [checked]="columns.includes('discount')" [color]="'primary'" class="mr-2 d-inline-block">Discount</mat-checkbox>
                     </button>
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox (change)="triggerColumns('uploaded_images')" [checked]="columns.includes('uploaded_images')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>Uploaded Images
+                        <mat-checkbox (change)="triggerColumns('uploaded_images')" [checked]="columns.includes('uploaded_images')" [color]="'primary'" class="mr-2 d-inline-block">Uploaded Images</mat-checkbox>
                     </button>
                     <button class="dropdown-item" (click)="$event.stopPropagation()">
-                        <mat-checkbox (change)="triggerColumns('status')" [checked]="columns.includes('status')" [color]="'primary'" class="mr-2 d-inline-block" style="vertical-align: text-bottom"></mat-checkbox>Status
+                        <mat-checkbox (change)="triggerColumns('status')" [checked]="columns.includes('status')" [color]="'primary'" class="mr-2 d-inline-block">Status</mat-checkbox>
                     </button>
                 </div>
             </div>
