@@ -118,55 +118,6 @@
     }
 }
 
-.ws-circle-button {
-    padding: .25rem;
-    position: relative;
-    display: inline-block;
-    &:first-child{
-        padding-left: 0;
-    }
-    .dropdown-menu{
-        position: absolute;
-        top: -10px;
-        left: inherit;
-        .dropdown-item {
-            font-size: .8rem;
-            padding: .25rem 1rem;
-            outline: none;
-            &:hover{
-                color: #000;
-                background-color: #ebecf0;
-            }
-        }
-    }
-    .btn.btn-controller {
-        border-radius: 5px;
-        width: 38px;
-        height: 30px;
-        padding: 0;
-        margin: 0;
-        background-color: map-get($ws-color, light-grey-4);
-        color: #505f79;
-        transition: background-color .2s ease-out, color .2s ease-out;
-        &:hover {
-            background-color: #ebecf0;
-        }
-        &:active{
-            color: #fff;
-            background-color: #b71c1c;
-        }
-        span {
-            display: block;
-            justify-content: center;
-        }
-        &.btn-selected-item {
-            color: map-get($ws-color, clear);
-            background-color: map-get($ws-color, primary);
-        }
-    }
-    
-}
-
 .label{
     border: 1px solid map-get($ws-color, border);
     border-radius: .25rem;
