@@ -154,8 +154,7 @@
           </div>
           <div class="d-flex align-items-center">
             <mat-checkbox [color]="'primary'" (change)="disabledControls()" class="mr-2 d-inline-block"  style="vertical-align: text-top"
-                formControlName="isShowLocation"></mat-checkbox>
-            <label style="display: inline-flex; margin-bottom: .35rem">Show Store Location</label>
+                formControlName="isShowLocation">Show Store Location</mat-checkbox>
           </div>
           <div class="ws-input">
             <input class="form-control font-9" autocomplete="nope" placeholder="Address" formControlName="address" required>
@@ -256,9 +255,7 @@
           </div>
           <div>
             <div class="d-flex align-items-center">
-              <mat-checkbox class="mr-2 d-inline-block" [color]="'primary'" formControlName="accept" required>
-              </mat-checkbox>
-              <span class="mb-2" style="vertical-align: text-bottom">I accept the term and condition.</span>
+              <mat-checkbox class="mr-2 d-inline-block" [color]="'primary'" formControlName="accept" required>I accept the term and condition.</mat-checkbox>
             </div>
             <mat-error *ngIf="termAndConfitionsFormGroup.controls['accept'].hasError('required')">Please accept before
               continue.</mat-error>
