@@ -6,6 +6,11 @@
 ---------------------------------------------
 - 2020-12-26                                -
 ---------------------------------------------
+.: WSM: Task: Create a status selection column (WSM-258)
+
+---------------------------------------------
+- 2020-12-26                                -
+---------------------------------------------
 .: WSM: Feature: Invoice Module (WSM-250)
 .: WSM: Task: CLONE - Prevent receiptId got brute force and customer information being exposed (WSM-259)
 
